# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-11-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add lager and goldrush as dependencies of erlang_cassandra

2013-11-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update trie

2013-11-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add a synchronous mode to the cloudi_logger to prevent
      excessive memory consumption and system death

2013-11-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix service request and info message queuing when
      cloudi_service_init/3 is executed and duo_mode is true
    * Add the request_timeout_immediate_max service configuration option
      to provide destination monitoring for long timeout values

2013-11-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cowboy to 0.9.0
    * Fix some type errors
    * Fix cloudi_runtime_testing random usage
    * Fix the CloudI release so no included CloudI services
      have their Erlang application dependencies started automatically

2013-11-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_handle_info/3 exception stacktrace logging
    * Fix cloudi_service_map_reduce resend on first few messages

2013-11-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make sure the cloudi module has all the types
    * Update cpg
    * Add the CloudI Service API function service_subscriptions/2

2013-11-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add default cloudi_core configuration

2013-11-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add automatic handling of the lazy destination refresh method
      cpg messages within the cloudi module (using
      the cloudi:destinations_refresh/2 function is still the best way
      of having recent service name destination data)

2013-10-25 Michael Truog   <mjtruog [at] gmail (dot) com>
